<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_gazebo</name>
  <author>Rodrigo Causarano</author>
  <version>1.0.0</version>
  <maintainer email="rjcausarano@gmail.com">Rodrigo Causarano</maintainer>
  <license>None</license>
  <description>
      None
  </description>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>gazebo_dev</depend>
  <depend>xacro</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>